# Actinidia

./: .gitignore  Actinidia.sln  CMakeLists.txt  README.md  actinidia.ds  respack.hexpat
Actinidia/: Actinidia.cpp  Actinidia.h  Actinidia.rc  Actinidia.vcxproj  Actinidia.vcxproj.filters  CMakeLists.txt  Interface.cpp  Makefile  actinidia.desktop.in  clean.sh
Actinidia/game/lua/: 001.lua
Actinidia/lua/: lua.lib
ActinidiaWin32/: .gitignore  ActinidiaInterface4lua.h  ActinidiaResLoader.h  ActinidiaWin32.cpp  ActinidiaWin32.rc  ActinidiaWin32.vcxproj  ActinidiaWin32.vcxproj.filters  Interface.cpp  demo.res  pch.h
ActinidiaWin32/demo/lua/: main.lua
ActinidiaWin32/game/: config.ini
ActinidiaWin32/game/lua/: 001.lua  core.lua  main.lua
Common/: Base.cpp  Base.h  Compress.cpp  PiCanvas.cpp  Window.cpp
GameHost/: App.cpp  App.h  GameHost.vcxproj  GameHost.vcxproj.filters  HostMain.h  MainPage.cpp  MainPage.xaml  README.md  readme.txt
GameHost/Actinidia/: ActinidiaGame.idl  ActinidiaGo.cpp  ActinidiaInterface4lua.h  ActinidiaResLoader.h  ActinidiaResource.cpp  ActinidiaResource.h
GameHost/Common/: DeviceResources.cpp  DeviceResources.h  DirectXHelper.h
GameHost/Content/: Sample3DSceneRenderer.h  SampleFpsTextRenderer.cpp  ShaderStructures.h
GameHost/Generated Files/: ActinidiaGame.g.h  ActinidiaGames.g.h  App.xaml  App.xaml.g.h  App.xaml.g.hpp  App.xbf  DirectXPage.g.h  DirectXPage.xaml  DirectXPage.xaml.g.h  DirectXPage.xaml.g.hpp  DirectXPage.xbf  MainPage.g.h  MainPage.xaml  MainPage.xaml.g.h  MainPage.xaml.g.hpp  MainPage.xbf  XamlBindingInfo.xaml.g.h  XamlBindingInfo.xaml.g.hpp  XamlMetaDataProvider.g.h  XamlMetaDataProvider.h  XamlTypeInfo.Impl.g.cpp  XamlTypeInfo.g.cpp  XamlTypeInfo.xaml.g.h  module.g.cpp
GameHost/Generated Files/sources/: ActinidiaGame.cpp  ActinidiaGame.h  DirectXPage.cpp  DirectXPage.h  MainPage.cpp  MainPage.h  XamlMetaDataProvider.cpp  XamlMetaDataProvider.h
GameHost/Generated Files/winrt/: GameHost.h
GameHost/Generated Files/winrt/impl/: GameHost.0.h  GameHost.1.h  GameHost.2.h
Host/: ActinidiaGo.h  App.xaml  App.xaml.cpp  App.xaml.h  DirectXPage.xaml  DirectXPage.xaml.cpp  DirectXPage.xaml.h  Host.vcxproj  Host.vcxproj.filters  HostMain.cpp  HostMain.h  Package.appxmanifest  README.md
Host/Common/: DeviceResources.cpp
Host/Content/: Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h  SampleFpsTextRenderer.cpp  SampleFpsTextRenderer.h  ShaderStructures.h
Host/Generated Files/: App.g.h  App.g.hpp  App.xbf  DirectXPage.g.h  DirectXPage.g.hpp  DirectXPage.xbf  XamlTypeInfo.g.cpp
Host/demo/: config.ini
Host/demo/lua/: core.lua
Tools/: .gitignore  Impl.cpp  Makefile  README.md  Tools.cpp  Tools.rc  Tools.vcxproj  Tools.vcxproj.filters  ToolsCmd.cpp  pch.h  resource.h
Tools/Common/: Canvas.h  Compress.cpp  Compress.h  GdiCanvas.cpp  GdiCanvas.h  ImageMatrix.cpp  ImageMatrix.h  Keycodes.h  Makefile  PiCanvas.cpp  PiCanvas.h  PlatformIndependentCanvas.cpp  ResourcePack.cpp  ResourcePack.h  Timer.h  Window.cpp  Window.h
Tools/Snake/: Snake.cpp  Snake.h
Tools/Snake/static/: hello_snake.psd
Tools/libjpeg/: jpeg.lib  jpegd.lib  turbojpeg-static.lib
Tools/libpng/: libpng16.lib  libpng16d.lib
Tools/static/: tools.rc.in
Tools/zlib/: zlibd.lib  zlibstatic.lib
actinidia/: .gitignore  CMakeLists.txt  actinidia.cpp  actinidia.h  interface.cpp  resource.h
actinidia/static/: actinidia.desktop.in  actinidia.rc.in  actinidia.visualelementsmanifest.xml
common/: Base.cpp  Compress.cpp  GdiCanvas.cpp  GdiCanvas.h  ImageMatrix.cpp  ImageMatrix.h  Keycodes.h  Makefile  PiCanvas.h  ResourcePack.cpp  Timer.h  Window.cpp  Window.h
example/: README.md
example/aircraft/: config.ini
example/aircraft/lua/: 001.lua  num_printer.lua
example/flappybird/: config.ini
example/flappybird/lua/: 001.lua  main.lua
example/rpg/: config.ini
example/rpg/lua/: 001.lua  002.lua  abkey.lua  rocker.lua  rpgcommon.lua  rpghero.lua  rpgmap.lua  text_printer.lua
example/rpg/pics/skin/: dialog.psd
example/rpg/pics/texts/: sample.psd  sample_black.psd
tools/: CMakeLists.txt  resource.h  tools.cpp  tools_cmd.cpp
tools/snake/: snake.cpp
tools/static/: tools.rc.in
uwp/: App.idl  App.xaml  DirectXPage.cpp  DirectXPage.h  DirectXPage.idl  DirectXPage.xaml  GameHost.vcxproj  GameHost.vcxproj.filters  HostMain.cpp  MainPage.h  MainPage.idl  Package.appxmanifest  README.md  pch.h
uwp/Actinidia/: ActinidiaGame.cpp  ActinidiaGame.h
uwp/Common/: StepTimer.h
uwp/Content/: Sample3DSceneRenderer.cpp  SampleFpsTextRenderer.h
